syntax = "proto3";

package pb;

option go_package = "/internal/transport/grpc";

service User {
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {}
    rpc GetUser (GetUserRequest) returns (GetUserResponse) {}
}

message CreateUserRequest  {
    string customerId =1;
    string status = 2;
    string address=3;
}

message CreateUserResponse {
    string userId =1;
}

message GetUserRequest  {
    string userId =1;
}
message GetUserResponse {
    string userId =1;
    string customerId =2;
    string status = 3;
    string address=4;
}
